--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--Шапка сайту-->
-  <header>
-    <nav>
-        <a href="./index.html">Web<span>Studio</span></a>
-        <ul>
-            <li> <a href="./index.html">Студія</a></li>
-            <li> <a href="">Портфоліо</a></li>
-            <li> <a href="">Контакти</a></li>
+  <header class="header">
+    <nav class="header-navigation">
+        <a href="./index.html" class="header-logo">Web<span class="log-studio">Studio</span></a>
+        <ul class="header-list list">
+            <li class="header-item"><a href="./index.html" class="header-link">Студія</a></li>
+            <li class="header-item"><a href="" class="header-link">Портфоліо</a></li>
+            <li class="header-item"><a href="" class="header-link">Контакти</a></li>
         </ul>
     </nav>
-    <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <ul class="contacts list">
+        <li class="contacts-list"><a href="mailto:info@devstudio.com" class="contacts-mail">info@devstudio.com</a></li>
+        <li class="contacts-list"><a href="tel:+380961111111" class="contacts-tel">+38 096 111 11 11</a></li>
     </ul>  
   </header>
 
@@ -32,7 +36,7 @@
    <!--Особливості-->
    <section>
     <h2>Особливості</h2>
-    <ul>
+    <ul class=" list">
         <li>
             <h3>Увага до деталей</h3>
         <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
@@ -54,7 +58,7 @@
    <!--Чим ми займаємося-->
    <section>
     <h2>Чим ми займаємося</h2>
-    <ul>
+    <ul class=" list">
         <li><img src="./images/box1.jpg" alt="Дизайнер працює за ноутбуком" width="370"> </li>
         <li><img src="./images/box2.jpg" alt="Дизайнер створює дизайн мобільного додатку" width="370"> </li>
         <li><img src="./images/box3.jpg" alt="Гамма кольорів на планшеті" width="370"> </li>
@@ -63,7 +67,7 @@
    <!--Наша команда-->
    <section>
     <h2>Наша команда</h2>
-    <ul>
+    <ul class=" list">
         <li>
             <img src="./images/img_employee1.jpg" alt="Фото продакт дизайнера" width="270">
             <h3>Ігор Дем'яненко</h3>
@@ -91,7 +95,7 @@
   <footer>
     <a href="./index.html">Web<span>Studio</span></a>
     <address>
-        <ul>
+        <ul class=" list">
             <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
