--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="./index.html" class="header-logo">Web<span class="log-studio">Studio</span></a>
         <ul class="header-list list">
             <li class="header-item"><a href="./index.html" class="header-link">Студія</a></li>
-            <li class="header-item"><a href="" class="header-link">Портфоліо</a></li>
+            <li class="header-item"><a href="./portfolio.html" class="header-link">Портфоліо</a></li>
             <li class="header-item"><a href="" class="header-link">Контакти</a></li>
         </ul>
     </nav>
@@ -29,76 +29,76 @@
 
   <main> 
     <!--Ефективні рішення для вашого бізнесу-->
-   <section>
-    <h1>Ефективні рішення для вашого бізнесу</h1>
-    <button type="button">Замовити послугу</button>
+   <section class="hero">
+    <h1 class="hero-title">Ефективні рішення для <br/>вашого бізнесу</h1> 
+    <button type="button" class="button">Замовити послугу</button>
    </section>
    <!--Особливості-->
    <section>
-    <h2>Особливості</h2>
-    <ul class=" list">
-        <li>
-            <h3>Увага до деталей</h3>
-        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+    <h2 class="features-name">Особливості</h2>
+    <ul class="features list">
+        <li class="features-list">
+            <h3 class="features-title">Увага до деталей</h3>
+        <p class="features-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
         </li>
-        <li>
-            <h3>Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+        <li class="features-list">
+            <h3 class="features-title">Пунктуальність</h3>
+            <p class="features-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
-        <li>
-            <h3>Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+        <li class="features-list">
+            <h3 class="features-title">Планування</h3>
+            <p class="features-text">Так само консультація з широким активом значною мірою зумовлює.</p>
         </li>
-        <li>
-            <h3>Сучасні технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+        <li class="features-list">
+            <h3 class="features-title">Сучасні технології</h3>
+            <p class="features-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
     </ul>
     </section>
    <!--Чим ми займаємося-->
-   <section>
-    <h2>Чим ми займаємося</h2>
-    <ul class=" list">
+   <section class="work">
+    <h2 class="work-title">Чим ми займаємося</h2>
+    <ul class="work-list list">
         <li><img src="./images/box1.jpg" alt="Дизайнер працює за ноутбуком" width="370"> </li>
         <li><img src="./images/box2.jpg" alt="Дизайнер створює дизайн мобільного додатку" width="370"> </li>
         <li><img src="./images/box3.jpg" alt="Гамма кольорів на планшеті" width="370"> </li>
     </ul>
    </section>
    <!--Наша команда-->
-   <section>
-    <h2>Наша команда</h2>
-    <ul class=" list">
+   <section class="team">
+    <h2 class="team-title">Наша команда</h2>
+    <ul class="team-list list">
         <li>
-            <img src="./images/img_employee1.jpg" alt="Фото продакт дизайнера" width="270">
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <img class="employee" src="./images/img_employee1.jpg" alt="Фото продакт дизайнера" width="270">
+            <h3 class="employee-name">Ігор Дем'яненко</h3>
+            <p class="employee-position">Product Designer</p>
         </li>
         <li>
             <img src="./images/img_employee2.jpg" alt="Фото розробника" width="270">
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="employee-name">Ольга Рєпіна</h3>
+            <p class="employee-position">Frontend Developer</p>
         </li>
         <li>
             <img src="./images/img_employee3.jpg" alt="Фото маркетолога" width="270">
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="employee-name">Микола Тарасов</h3>
+            <p class="employee-position">Marketing</p>
         </li>
         <li>
             <img src="./images/img_employee4.jpg" alt="Фото дизайнера" width="270">
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <h3 class="employee-name">Михайло Єрмаков</h3>
+            <p class="employee-position">UI Designer</p>
         </li>
     </ul>
    </section>
   </main>
   <!--Підвал сайту-->
-  <footer>
-    <a href="./index.html">Web<span>Studio</span></a>
+  <footer class="footer">
+    <a href="./index.html" class="header-logo">Web<span class="log-white">Studio</span></a>
     <address>
-        <ul class=" list">
-            <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="address list">
+            <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="address-map">м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com" class="address-mail">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="address-tel">+38 096 111 11 11</a></li>
         </ul> 
     </address>
   </footer>
