added for address new class
<address class="address">

--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,7 @@
   <!--Підвал сайту-->
   <footer class="footer">
     <a href="./index.html" class="header-logo">Web<span class="log-white">Studio</span></a>
-    <address class="adress">
+    <address class="address">
         <ul class="address-list list">
             <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="address-map">м. Київ, пр-т Лесі Українки, 26</a></li>
             <li><a href="mailto:info@devstudio.com" class="address-mail">info@devstudio.com</a></li>
