--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!--Шапка сайту-->
@@ -68,22 +68,22 @@
    <section class="team">
     <h2 class="team-title">Наша команда</h2>
     <ul class="team-list list">
-        <li>
+        <li class="team-item">
             <img class="employee" src="./images/img_employee1.jpg" alt="Фото продакт дизайнера" width="270">
             <h3 class="employee-name">Ігор Дем'яненко</h3>
             <p class="employee-position">Product Designer</p>
         </li>
-        <li>
+        <li class="team-item">
             <img src="./images/img_employee2.jpg" alt="Фото розробника" width="270">
             <h3 class="employee-name">Ольга Рєпіна</h3>
             <p class="employee-position">Frontend Developer</p>
         </li>
-        <li>
+        <li class="team-item">
             <img src="./images/img_employee3.jpg" alt="Фото маркетолога" width="270">
             <h3 class="employee-name">Микола Тарасов</h3>
             <p class="employee-position">Marketing</p>
         </li>
-        <li>
+        <li class="team-item">
             <img src="./images/img_employee4.jpg" alt="Фото дизайнера" width="270">
             <h3 class="employee-name">Михайло Єрмаков</h3>
             <p class="employee-position">UI Designer</p>
@@ -94,8 +94,8 @@
   <!--Підвал сайту-->
   <footer class="footer">
     <a href="./index.html" class="header-logo">Web<span class="log-white">Studio</span></a>
-    <address>
-        <ul class="address list">
+    <address class="address">
+        <ul class="address-list list">
             <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="address-map">м. Київ, пр-т Лесі Українки, 26</a></li>
             <li><a href="mailto:info@devstudio.com" class="address-mail">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="address-tel">+38 096 111 11 11</a></li>
