rename class for visually-hidden

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    </section>
    <!--Особливості-->
    <section>
-    <h2 class="features-name">Особливості</h2>
+    <h2 class="visually-hidden">Особливості</h2>
     <ul class="features list">
         <li class="features-list">
             <h3 class="features-title">Увага до деталей</h3>
